# secret_manager_backend

./: Cargo.toml
migrations/: 20260614201235_user.sql
src/: config.rs  db.rs  dtos.rs  error.rs  handler.rs  main.rs  middleware.rs  models.rs  routes.rs  secret.rs  utils.rs
src/handler/: auth.rs  keys.rs  secrets.rs  secrets_version.rs  settings.rs  user.rs
src/utils/: connect_user_database.rs  create_table.rs  decrypt.rs  encrypt.rs  generate_key.rs  password.rs  token.rs
